# pkg-imx-gpu-viv

./: .gitmodules  EULA.txt  README  egl.pc.in  egl_dfb.pc.in  egl_fb.pc.in  egl_wl.pc  egl_wl.pc.in  egl_x11.pc.in  functions.inc  gl.pc.in  glesv1_cm.pc.in  glesv2.pc.in  glext.h  gpu-viv-bin-x11.spec  gpu-viv-bin.spec  install.sh  meson.build  mkspecs  nolib.c  vg.pc.in  vivante.ld.so.conf  vivante.profile.sh  wayland-egl.pc.in
debian/: README.Debian  README.source  changelog  control  copyright  docs  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  gpu-viv-bin-dfb-dev.dirs  gpu-viv-bin-dfb.dirs  gpu-viv-bin-dfb.install  gpu-viv-bin-fb-dev.install  gpu-viv-bin-fb.dirs  gpu-viv-bin-fb.install  gpu-viv-bin-x11-dev.install  gpu-viv-bin-x11.dirs  gpu-viv-bin-x11.install  gpu-viv-bin.cron.d.ex  gpu-viv-bin.default.ex  gpu-viv-bin.doc-base.EX  imx-gpu-viv-common.install  imx-gpu-viv-common.udev  imx-gpu-viv-demos.install  imx-gpu-viv-demos.lintian-overrides  imx-gpu-viv-dev.install  imx-gpu-viv-dfb-dev.install  imx-gpu-viv-dfb.install  imx-gpu-viv-dfb.postinst  imx-gpu-viv-dfb.prerm  imx-gpu-viv-fb-dev.install  imx-gpu-viv-fb-dev.postinst  imx-gpu-viv-fb-dev.prerm  imx-gpu-viv-fb.install  imx-gpu-viv-fb.postinst  imx-gpu-viv-fb.prerm  imx-gpu-viv-wl-dev.install  imx-gpu-viv-wl-dev.postinst  imx-gpu-viv-wl-dev.prerm  imx-gpu-viv-wl.install  (+33 more)
wrappers/: libgbm1.c  libgbm1.symbols  libwayland-egl1.c  libwayland-egl1.symbols  meson.build
